Man page fixes.

--- a/tmux.1
+++ b/tmux.1
@@ -14,7 +14,7 @@
 .\" IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 4 2011 $
+.Dd $Mdocdate: March 25 2013 $
 .Dt TMUX 1
 .Os
 .Sh NAME
@@ -945,7 +945,7 @@ command and keys modified or removed with
 .Ic bind-key
 and
 .Ic unbind-key .
-One command in accepts an argument,
+One command accepts an argument,
 .Ic copy-pipe ,
 which copies the selection and pipes it to a command.
 For example the following will bind
@@ -1104,7 +1104,7 @@ If
 is given, the output includes escape sequences for text and background
 attributes.
 .Fl C
-also escapes non-printable characters as octal \\xxx.
+also escapes non-printable characters as octal \exxx.
 .Fl J
 joins wrapped lines and preserves trailing spaces at each line's end.
 .Fl P
@@ -1221,7 +1221,7 @@ By default, the tree is collapsed and sessions must be expanded to windows
 with the right arrow key.
 The
 .Fl u
-will start with all all sessions expanded instead.
+option will start with all sessions expanded instead.
 .Pp
 If
 .Fl b
@@ -2025,8 +2025,8 @@ command.
 .Nm
 also supports user options which are prefixed with a
 .Ql \&@ .
-User options may have any name, so long as it is prefixed with
-.Ql \&@,
+User options may have any name, so long as they are prefixed with
+.Ql \&@ ,
 and be set to any string.
 For example
 .Bd -literal -offset indent
@@ -3535,14 +3535,14 @@ if
 returns success or the second
 .Ar command
 otherwise.
-With
-.Fl b ,
-.Ar shell-command
-is run in the background.
 Before being executed, shell-command is expanded using the rules specified in the
 .Sx FORMATS
 section, including those relevant to
 .Ar target-pane .
+With
+.Fl b ,
+.Ar shell-command
+is run in the background.
 .It Ic lock-server
 .D1 (alias: Ic lock )
 Lock each client individually by running the command specified by the
@@ -3556,14 +3556,14 @@ option.
 .D1 (alias: Ic run )
 Execute
 .Ar shell-command
-without creating a window.
-With
-.Fl b ,
-the command is run in the background.
+in the background without creating a window.
 Before being executed, shell-command is expanded using the rules specified in
 the
 .Sx FORMATS
 section.
+With
+.Fl b ,
+the command is run in the background.
 After it finishes, any output to stdout is displayed in copy mode (in the pane
 specified by
 .Fl t
@@ -3666,7 +3666,6 @@ outputs notifications.
 A notification will never occur inside an output block.
 .Pp
 The following notifications are defined:
-.Pp
 .Bl -tag -width Ds
 .It Ic %exit Op Ar reason
 The
