--- a/tmux.1
+++ b/tmux.1
@@ -98,10 +98,6 @@ The options are as follows:
 Force
 .Nm
 to assume the terminal supports 256 colours.
-.It Fl 8
-Like
-.Fl 2 ,
-but indicates that the terminal supports 88 colours.
 .It Fl C
 Start in control mode.
 Given twice
@@ -145,11 +141,12 @@ session created, and continues to process the rest of the configuration file.
 .It Fl L Ar socket-name
 .Nm
 stores the server socket in a directory under
-.Pa /tmp
-(or
+.Ev TMUX_TMPDIR ,
 .Ev TMPDIR
-if set);
-the default socket is named
+if it is unset, or
+.Pa /tmp
+if both are unset.
+The default socket is named
 .Em default .
 This option allows a different socket name to be specified, allowing several
 independent
