--- a/tmux.1
+++ b/tmux.1
@@ -2645,7 +2645,7 @@ The default is
 .Ql \ -_@ .
 .El
 .It Xo Ic set-window-option
-.Op Fl agqu
+.Op Fl agoqu
 .Op Fl t Ar target-window
 .Ar option Ar value
 .Xc
@@ -2654,6 +2654,7 @@ Set a window option.
 The
 .Fl a ,
 .Fl g ,
+.Fl o ,
 .Fl q
 and
 .Fl u
