Add host_short format, from Tiago Cunha.

--- a/tmux.1
+++ b/tmux.1
@@ -3056,6 +3056,7 @@ The following variables are available, where appropriate:
 .It Li "history_limit" Ta "Maximum window history lines"
 .It Li "history_size" Ta "Size of history in bytes"
 .It Li "host" Ta "Hostname of local host"
+.It Li "host_short" Ta "Hostname of local host (no domain name)"
 .It Li "insert_flag" Ta "Pane insert flag"
 .It Li "keypad_cursor_flag" Ta "Pane keypad cursor flag"
 .It Li "keypad_flag" Ta "Pane keypad flag"
