use .Mt for email addresses; from Jan Stary <hans at stare dot cz>; ok jmc@

--- a/tmux.1
+++ b/tmux.1
@@ -3799,4 +3799,4 @@ bind-key S command-prompt "new-window -n %1 'ssh %1'"
 .Sh SEE ALSO
 .Xr pty 4
 .Sh AUTHORS
-.An Nicholas Marriott Aq nicm@users.sourceforge.net
+.An Nicholas Marriott Aq Mt nicm@users.sourceforge.net
