Support -c for new-session, based on code from J Raynor.

--- a/tmux.1
+++ b/tmux.1
@@ -676,6 +676,7 @@ Lock all clients attached to
 .Ar target-session .
 .It Xo Ic new-session
 .Op Fl AdDP
+.Op Fl c Ar start-directory
 .Op Fl F Ar format
 .Op Fl n Ar window-name
 .Op Fl s Ar session-name
