Change the default for the default-path option to ~. This is a quick change to turn off the KERN_PROC_CWD code which is unpredictable. Later it will go away and there may be other changes to how this works.

--- a/tmux.1
+++ b/tmux.1
@@ -2173,13 +2173,15 @@ to create a login shell using the value of the
 option.
 .It Ic default-path Ar path
 Set the default working directory for new panes.
-If empty (the default), the working directory is determined from the process
+If empty, the working directory is determined from the process
 running in the active pane, from the command line environment or from the
 working directory where the session was created.
 Otherwise the same options are available as for the
 .Fl c
 flag to
 .Ic new-window .
+The default is
+.Ql ~ .
 .It Ic default-shell Ar path
 Specify the default shell.
 This is used as the login shell for new windows when the
