Key to swap to other end of selection (bound to o with vi keys), from J Raynor.

--- a/tmux.1
+++ b/tmux.1
@@ -870,6 +870,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Next space, end of word" Ta "E" Ta ""
 .It Li "Next word" Ta "w" Ta ""
 .It Li "Next word end" Ta "e" Ta "M-f"
+.It Li "Other end of selection" Ta "o" Ta ""
 .It Li "Paste buffer" Ta "p" Ta "C-y"
 .It Li "Previous page" Ta "C-b" Ta "Page up"
 .It Li "Previous word" Ta "b" Ta "M-b"
