Replace ## by # in format.

--- a/tmux.1
+++ b/tmux.1
@@ -3011,6 +3011,9 @@ for example
 .Ql #{session_name} .
 Some variables also have an shorter alias such as
 .Ql #S .
+.Ql ##
+is replaced by a single
+.Ql # .
 Conditionals are also accepted by prefixing with
 .Ql \&?
 and separating two alternatives with a comma;
