--- a/TODO
+++ b/TODO
@@ -128,4 +128,14 @@
   and return a value to say whether clients need to be checked for dead
   sessions? sort of like session_detach now but more so. or some other scheme
   to make it simpler and clearer? also would be nice to remove/rename
-  server-fn.c.
+  server-fn.c
+
+- more readable way to work out the various things commands need to know about
+  the client, notably:
+      - is this the config file? (cmdq->c == NULL)
+      - is this a command client? (cmdq->c != NULL && cmdq->c->session == NULL)
+      - is this a control client?
+      - can i do stdin or stdout to this client?
+  or even guarantee that cmdq->c != NULL and provide a better way to tell when
+  in the config file - then we use cmdq->c if we need a client w/o a session
+  else cmd_current_client
